@@ -5,6 +5,7 @@ ver 0.23 (not yet released)
 * database
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
+  - proxy: split search into chunks to avoid exceeding the output buffer
 * output
   - pipewire: new plugin
   - snapcast: new plugin
